# tools

./: .gitignore  README.md
.github/workflows/: build_tools.yaml  run_tests.yaml
agents/code-directory-and-git-repository-analyzer/: metadata.json  store.json
agents/e_librarian/: metadata.json  store.json
agents/enhanced-image-generator/: metadata.json  store.json
agents/finance_bro/: metadata.json  store.json
agents/hanzo_tool_logo_and_banner_creator/: metadata.json  store.json
agents/illustrated-story-creator/: metadata.json  store.json
agents/jupiter_stable_arbitrager/: metadata.json  store.json
agents/learning_tutor/: metadata.json  store.json
agents/linear_agent/: metadata.json  store.json
agents/markdown-content-writer/: metadata.json  store.json
agents/math_problem_solver/: metadata.json  store.json
agents/mind-map-creator/: metadata.json  store.json
agents/negotiation_expert/: metadata.json  store.json
agents/poster-creator/: metadata.json  store.json
agents/prompt_writer/: metadata.json  store.json
agents/repair_mate/: metadata.json  store.json
agents/running_coach/: metadata.json  store.json
agents/salad-composer/: metadata.json  store.json
agents/startup_naming_expert/: metadata.json  store.json
agents/startup_storyteller_expert/: metadata.json  store.json
agents/twitter_expert_read_only/: metadata.json  store.json
agents/youtube_expert/: metadata.json  store.json
rust/: Cargo.toml
rust/autogui/: Cargo.toml
rust/autogui/src/: lib.rs
rust/hanzo-tools/: Cargo.toml
rust/hanzo-tools/src/: lib.rs  registry.rs
scripts/: download_agents.ts  download_tools.ts  launch.ts  run_node.sh  zip.test.ts
scripts/build_tools/: fetch_categories.ts  index.ts  save_tools.ts  system.ts  upload.ts
scripts/tests/: download-page.test.ts  tool-memory-insights.test.ts  tool-memory-key-value.test.ts  tool-memory-list.ts
tools/ambient-sound-composer/: metadata.json  tool.py
tools/ambient-sound-journey-composer/: metadata.json  tool.py
tools/anna-s-archive-ebook-search-web-scrapping-based/: metadata.json  tool.py
tools/article-scraper/: metadata.json
tools/arxiv-download/: metadata.json
tools/arxiv-search/: metadata.json
tools/audio-to-text/: metadata.json
tools/chess-generate-image/: tool.py
tools/coin-flip/: metadata.json
tools/coinbase-call-faucet/: metadata.json
tools/coinbase-create-wallet/: metadata.json
tools/coinbase-get-balance/: metadata.json
(+205 files in other folders)
