[package]
name = "computer-control"
version = "0.1.0"
edition = "2021"
authors = ["Hanzo AI"]
description = "Computer control tool for MCP - screenshot, mouse, and keyboard control"
license = "MIT"

[dependencies]
# Core
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"

# Computer Control
enigo = "0.2"
screenshots = "0.8"
image = "0.24"
base64 = "0.21"

# Platform specific
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
core-graphics = "0.23"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"